correct donators on mobile

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -20,6 +20,10 @@ html {
   overflow-x: hidden;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
